@@ -1556,18 +1556,38 @@ Interval integer_interval_value() :
 {
   Interval i = null;
   int lower = 0;
-  int upper = 0;
+  int upper = 0;  
 }
 {
   <SYM_INTERVAL_DELIM>
   (
+    LOOKAHEAD( 3 )    
+    {
+      boolean lowerInclusive = true;
+	  boolean upperInclusive = true; 
+	  boolean upperSpecified = false; 	
+    }
+    [
+      <SYM_GT> { lowerInclusive = false; }
+	]
     lower = integer_value() 
     { upper = lower; }
     [ 
-      <SYM_ELLIPSIS> upper = integer_value()       
+      <SYM_ELLIPSIS> 
+      [ 
+        <SYM_LT> {  upperInclusive = false; } 
+      ] 
+      upper = integer_value()
+      { upperSpecified =true; }       
     ]
     {
-      i = new Interval(new Integer(lower), new Integer(upper), true, true);
+      if(!lowerInclusive && !upperSpecified) {
+      	// specical case for |>100|
+      	i = new Interval(new Integer(lower), null, false, false);
+      } else {
+      	i = new Interval(new Integer(lower), new Integer(upper), lowerInclusive, 
+      	                 upperInclusive);
+      }	
     }
   |
     <SYM_LT> upper = integer_value()
@@ -1575,14 +1595,14 @@ Interval integer_interval_value() :
       i = new Interval(null, new Integer(upper), false, false);
     }
   |
-    <SYM_LE> upper = integer_value()
-    {
-      i = new Interval(null, new Integer(upper), false, true);
-    }
-  |
     <SYM_GT> lower = integer_value()
     {
       i = new Interval(new Integer(lower), null, false, false);
+    }
+  |
+    <SYM_LE> upper = integer_value()
+    {
+      i = new Interval(null, new Integer(upper), false, true);
     }
   |
     <SYM_GE> lower = integer_value()
@@ -1642,13 +1662,33 @@ Interval real_interval_value() :
 {
   <SYM_INTERVAL_DELIM>
   (
+    LOOKAHEAD( 3 )    
+    {
+      boolean lowerInclusive = true;
+	  boolean upperInclusive = true; 
+	  boolean upperSpecified = false; 	
+    }
+    [
+      <SYM_GT> { lowerInclusive = false; }
+	]
     lower = real_value() 
     { upper = lower; }
     [ 
-      <SYM_ELLIPSIS> upper = real_value() 
+      <SYM_ELLIPSIS> 
+      [ 
+        <SYM_LT> {  upperInclusive = false; } 
+      ]
+      upper = real_value()       
+      { upperSpecified = true; } 
     ]
     {
-      i = new Interval(new Double(lower), new Double(upper), true, true);
+      if(!lowerInclusive && !upperSpecified) {
+      	// specical case for |>100.0|
+      	i = new Interval(new Double(lower), null, false, false);
+      } else {	 
+        i = new Interval(new Double(lower), new Double(upper), lowerInclusive, 
+                         upperInclusive);
+      }
     }
   |
     <SYM_LT> upper = real_value()
