@@ -61,6 +61,12 @@ definition
                 
                 -- single value as interval
                 integer_attr18 matches {|100|}
+                
+               -- non-inclusive interval
+               integer_attr19 matches {|>0..100|}                
+               integer_attr20 matches {|0..<100|}                
+               integer_attr21 matches {|>0..<100|}                
+
             }
         }
         real_attributes matches {
@@ -86,7 +92,12 @@ definition
                 real_attr17 matches {|-10.0..-5.0|; -8.0}         
                 
                 -- single value as interval
-                real_attr18 matches {|100.0|}       
+                real_attr18 matches {|100.0|} 
+                
+                -- non-inclusive interval
+                real_attr19 matches {|>0.0..100.0|}                
+                real_attr20 matches {|0.0..<100.0|}                
+                real_attr21 matches {|>0.0..<100.0|}        
             }
         }
         date_attributes matches {
